<resources>
    <string name="app_name">CSCI3130-Project-Group17</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="dont_have_an_account">Dont have an Account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="EMPTY_STRING">\"\"</string>
    <string name="TITLE">" Create an Account  "</string>
    <string name="SIGNUPBUTTON">" Create your Account"</string>
    <string name="location">location</string>
    <string name="phone_number">phone_number</string>
    <string name="upload_your_resume">upload_your_resume</string>
    <string name="apply">apply</string>
    <string name="home">home</string>
    <string name="last_name">last_name</string>
    <string name="first_name">first_name</string>
    <string name="job_application">Job Application</string>
    <string name="image">image</string>
    <string name="Upload_Your_Resume">Upload your Resume</string>
    <string name="JobApplication">JobApplication</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Location">Location</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="view_jobs">View Jobs</string>
    <string name="logo">Logo</string>
    <string name="PDF_FILE_SELECT">PDF FILE SELECT</string>
    <string name="title_activity_view_jobs">Map</string>
    <string name="activejobs">active_jobs</string>
    <string name="active_jobs">Current Jobs</string>
    <string name="JobTitle">jobtitle</string>
    <string name="payrate">payrate</string>
    <string name="Payrate">$ Pay Rate</string>
    <string name="viewchat">View Chats</string>
    <string name="locationfromdatabase">location</string>
    <string name="filter">Filter</string>
    <string name="leave_a_review">Leave A Review</string>
    <string name="rate_out_of_5">Rate out of 5:</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="submit_review">Submit Review</string>
    <string name="leave_comment">Leave A Comment:</string>
    <string name="Hire">hire</string>
    <string name="review_applicant">Review Applicant</string>
    <string name="email2">Email</string>
    <string name="phone_number_employee">Phone Number</string>
    <string name="write_a_message">write message</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="resume">Resume</string>
    <string name="view_applicant">View Applicant</string>
    <string name="notification">Notification</string>
    <string name="jobtitle_notification">Jobtitle</string>
    <string name="review_jobs_notification">Review Jobs</string>
    <string name="delete_notification">Delete</string>
    <string name="location_notification">Location</string>
    <string name="employer_profile">Employer Profile</string>
    <string name="description">Description</string>
    <string name="jobtype">Type</string>
</resources>