<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="240dp"
        android:layout_marginRight="240dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="490dp"
        app:cardBackgroundColor="#B1AFAF"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/jobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/JobTitle"
            android:textColor="#000000"
            android:textSize="15.5sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/locationfromdatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:background="@android:color/transparent"
            android:text="@string/locationfromdatabase"
            android:textColor="#000000"
            android:textSize="15.5sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/payrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="235dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/Payrate"
            android:textColor="#000000"
            android:textSize="15.5sp"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/viewchat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="235dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="2dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/viewchat"
            android:textColor="#000000"
            android:textSize="15.5sp"
            tools:ignore="SmallSp"
            android:focusable="true" />
    </androidx.cardview.widget.CardView>
</LinearLayout>


