<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Firstname_employee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/FirstName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Email_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Email_employee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Phone_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Firstname_employee"
        tools:ignore="MissingConstraints,TextFields" />

    <TextView
        android:id="@+id/Phone_employee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number_employee"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Location_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_employee"
        tools:ignore="DuplicateIds,MissingConstraints,TextFields" />

    <TextView
        android:id="@+id/Location_employee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Location"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Resume_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone_employee"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <TextView
        android:id="@+id/Resume_employee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="45dp"
        android:autofillHints=""
        android:ems="10"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/resume"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Hire_review_application"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Location_employee"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Hire_review_application"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="240dp"
        android:layout_marginRight="240dp"
        android:layout_marginBottom="40dp"
        android:ems="8"
        android:text="@string/Hire"
        app:layout_constraintBottom_toTopOf="@+id/horizontalline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resume_employee"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/horizontalline"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/switch2home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hire_review_application"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/switch2home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="300dp"
        android:ems="8"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalline"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>