<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--this color is taken from the https://stackoverflow.com/questions/27617577/android-layout-background-with-two-colors    -->

    <!--profile pic from the
    https://stackoverflow.com/questions/31123516/how-can-i-remove-borders-for-imageview-in-android-studio       -->
    <!-- Using CardView for CircularImageView -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-72dp">

        <FrameLayout
            android:id="@+id/jobapplication"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_weight="1"
            android:background="#B1AFAF" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"

        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="#FFFFFF"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <!-- image is take from the
        https://www.geeksforgeeks.org/how-to-create-circular-imageview-in-android-using-cardview/ -->
        <!-- add a Image image.png in your Drawable folder -->
        <ImageView
            android:id="@+id/profilepic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            tools:layout_editor_absoluteX="276dp"
            tools:layout_editor_absoluteY="16dp"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameofthepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="14dp"
        android:background="#B1AFAF"
        android:text="@string/JobApplication"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameofthepage"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/LastName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Firstname"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lastname"
        tools:ignore="DuplicateIds,MissingConstraints,TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/Location"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Phonenumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        tools:ignore="DuplicateIds,MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Phonenumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/PhoneNumber"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/Resume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Location"
        tools:ignore="MissingConstraints,TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Resume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/Upload_Your_Resume"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phonenumber"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/Apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="240dp"
        android:layout_marginRight="240dp"
        android:ems="8"
        android:text="@string/apply"
        app:layout_constraintBottom_toTopOf="@+id/horizontalline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resume"
        tools:ignore="MissingConstraints" />

    <!--this is taken reference from the given link
    https://www.geeksforgeeks.org/how-to-draw-horizontal-and-vertical-lines-in-an-android-app-using-xml/    -->
    <View
        android:id="@+id/horizontalline"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/switch2home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Apply"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/switch2home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:ems="8"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalline"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>